added refactor and centralised code